css/styles.css
/* ... */
@media screen and (max-width: 768px) {
  :root {
    --social-icons-size: 21px;

    --mini-sys-size: 100px;
    --planets-size: 210px;

    --mercury-top: 8px;
    --venus-top: 19px;
    --earth-top: 23px;

    --sun-size: 100px;
    --mercury-size: 20px;
    --venus-size: 25px;
    --earth-size: 35px;

    --mercury-orbit-size: 100px;
    --venus-orbit-size: 150px;
    --earth-orbit-size: 200px;
  }
}

body {
  color: var(--custom-color, var(--slate));
  font-family: var(--custom-font, var(--font-text));
  background-color: var(--violet);
  line-height: 1.3;
}

/* ========================== Typography ========================== */
svg {
  /* width: 100%;
  height: 100%; */
  fill: currentColor;
  color: var(--blue);
  vertical-align: middle;
}

h1,
h2,
h3 {
  line-height: 1;
  font-family: var(--font-head);
}

p,
li,
a {
  display: inline-block;
  color: var(--slate);
  font-family: var(--font-text);
}

/* ========================== Utility Classes ========================== */
.flex {
  display: flex;
  align-items: var(--align-flex, center);
  gap: var(--gap, 1rem);
}

.container {
  margin: 0 auto;
  max-width: 1250px;
  /* border: 2px solid red; */
}

.btn {
  padding: 0.75em 1em;
  color: var(--blue);
  border: 1px solid var(--blue);
  border-radius: var(--border-radius);
  font-family: var(--font-text);
  font-size: var(--fs-custom, var(--fs-sm));
  transition: background-color var(--normal) var(--easeOutSine);
}

.no-animations *,
.no-animations *::before,
.no-animations *::after {
  animation: none !important;
  transition: none !important;
}

.hide-nav {
  transform: translateY(-100%);
}

.resize-nav {
  height: 80px !important;
  box-shadow: 0 0.625rem 1.75rem -0.6rem var(--violet-shadow);
}

.heading {
  color: var(--lightest-slate);
  font-weight: 800;
  position: relative;
  font-size: clamp(var(--fs-xxxl), 4vw, var(--fs-head));
}

.heading::before {
  content: url(../img/left-line.svg);
  right: 104%;
}

.heading::after {
  content: url(../img/right-line.svg);
  left: 104%;
}

.heading::before,
.heading::after {
  --gap: 0;
  display: block;
  position: absolute;
  width: var(--heading-line);
  bottom: 15%;
  opacity: 0.4;
}

/* ========================== Navigation Bar ========================== */
.nav-header {
  display: grid;
  align-items: center;
  background-color: var(--violet-tint);
  width: 100%;
  height: 100px;
  position: fixed;
  z-index: 10;
  transition: transform var(--quick) var(--easeOutSine) 0.1s,
              height var(--quick) var(--easeOutSine);
  backdrop-filter: blur(6px);
  overflow: hidden;
}

.navbar {
  z-index: 10;
  position: relative;
  justify-content: space-between;
  margin: 0 clamp(25px, 7.55vw, 50px);
}

.nav-logo {
  flex: 0 0 auto;
}

.nav-logo,
.nav-logo > a,
.nav-logo > a > svg {
  width: 42px;
  height: 42px;
}

#logo {
  fill: none;
  /* transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1); */
}

#logo:hover {
  fill: var(--blue-tint);
  /* transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1); */
}

.ham {
  display: none;
}

.nav-box {
  --gap: 1.5rem;
}

/* Hover effect doing the underline from left-in (on hover) to right-out (off hover) */
.nav-list-item {
  position: relative;
  font-size: var(--fs-sm);
  color: var(--lightest-slate);
  transition: color var(--normal) var(--easeInCubic);
}

.nav-list-item::after {
  content: '';
  display: block;
  position: absolute;
  top: calc(100% + 0.5px); right: 0; bottom: 0; left: 0.25px;
  inset: calc(100% + 0.5px) 0 0 0.25px;
  width: 100%;
  height: 1px;
  background-color: var(--blue);
  border-radius: var(--border-radius);
  transform: scaleX(0);
  transform-origin: right;
  padding-block: 0.75px;
  transition: transform var(--normal) var(--easeOutSine);
}

.nav-list-item:hover {
  color: var(--blue);
}

.nav-list-item:hover::after {
  transform: scaleX(1);
  transform-origin: left;
}

.resume-btn:hover {
  background-color: var(--blue-tint);
  /* background-image: conic-gradient(from 180deg, var(--blue), var(--blue-tint)); */
}
/* ... */

